# RayLibGame

./: .gitignore  CMakeLists.txt  MONITOR_FIX_REPORT.txt  TODO.txt  backup.cpp  design_document.txt  relapsed_game_concepts.txt  tenet_game_concepts.txt
LIBS_FOR_RELEASE_BUILD/: README.txt
backups/: audio_warning_when_building.txt  backup.cpp  backuped_main_working_letterbox_but_no_black_stripes.txt  input-cpp_backuped.txt  main-backup.txt  main_backuped_before_animation_array.txt  shadows_example.cpp
raylib/: README.md
raylib/src/: raylib.h  rcore.c
src/: bunny_mark.cpp  collision.cpp  debugging.cpp  declaration.cpp  draw.cpp  functions.cpp  input.cpp  load.cpp  main.cpp  settings.cpp
